# MotorLib

./: LICENSE.txt  MotorTest.py  PlotPID.py  README.md  pyproject.toml  setup.py
Motorlib/: Motor.py  MotorType.py  PIDController.py  PWMDriver.py  __init__.py
src/pymotorlib/: BaseEncoder.py  Motor.py  MotorType.py  __init__.py
